# Game-of-Life

./: pyproject.toml
Game-of-Life/: __main__.py  cli.py  grid.py  patterns.py  patterns.toml  views.py
